--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -33,6 +33,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.5",
     "@prisma/client": "^6.19.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
     "pino": "^10.3.0",
     "pino-http": "^11.0.0",
