fix(ci): use stellar cli

--- a/.github/workflows/contract.yml
+++ b/.github/workflows/contract.yml
@@ -12,47 +12,63 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  WORKING_DIR: app/onchain
+
 
 jobs:
-  checks:
-    name: Format, Lint, Build & Test
+  contracts:
+    name: Build & Test Contracts
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ${{ env.WORKING_DIR }}
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
         with:
-          targets: wasm32-unknown-unknown
-          components: rustfmt, clippy
+          profile: minimal
+          toolchain: stable
+          override: true
 
-      - name: Cache Cargo dependencies
+      - name: Ensure Cargo cache directories exist
+        run: |
+          mkdir -p $HOME/.cargo/bin
+          mkdir -p $HOME/.cargo/registry/index
+          mkdir -p $HOME/.cargo/registry/cache
+          mkdir -p $HOME/.cargo/git/db
+          mkdir -p ${{ github.workspace }}/app/onchain/contracts/target
+
+      - name: Cache Cargo
         uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/bin
-            ~/.cargo/registry
-            ~/.cargo/git
-            ${{ env.WORKING_DIR }}/target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('app/onchain/**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
+            ~/.cargo/registry/index
+            ~/.cargo/registry/cache
+            ~/.cargo/git/db
+            ${{ github.workspace }}/app/onchain/contracts/target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('app/onchain/contracts/Cargo.lock') }}
+
+      - name: Add wasm32 target
+        run: rustup target add wasm32-unknown-unknown
 
       - name: Verify formatting
+        working-directory: ./app/onchain
         run: cargo fmt --check
 
       - name: Lint with Clippy (deny warnings)
+        working-directory: ./app/onchain
         run: cargo clippy --all-targets --all-features -- -D warnings
 
-      - name: Build contract (WASM, release)
-        run: cargo build --target wasm32-unknown-unknown --release
+      - name: Install Stellar CLI
+        run: |
+          mkdir -p ~/.local/bin
+          curl -L https://github.com/stellar/stellar-cli/releases/download/v22.0.1/stellar-cli-22.0.1-x86_64-unknown-linux-gnu.tar.gz | tar xz -C ~/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          stellar version
 
-      - name: Run tests
+      - name: Build contracts
+        working-directory: ./app/onchain/contracts
+        run: stellar contract build
+
+      - name: Test contracts
+        working-directory: ./app/onchain/contracts
         run: cargo test
