--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "i": "^0.3.7",
     "npm": "^11.10.1",
     "prisma": "^7.4.1"
+  },
+  "dependencies": {
+    "@nestjs/swagger": "^11.2.6",
+    "express": "^5.2.1"
   }
 }
