Fix Environment Configuration UX – To Show Active Backend Endpoint

--- a/app/mobile/.env.example
+++ b/app/mobile/.env.example
@@ -4,5 +4,11 @@
 # For iOS Simulator, use http://localhost:3000
 EXPO_PUBLIC_API_URL=http://localhost:3000
 
+# Optional: human-readable environment name shown in the Health Screen badge and footer.
+# Accepted values (examples): dev | staging | prod
+# If omitted, the app infers the label from EXPO_PUBLIC_API_URL
+# (URLs containing "staging" → staging, "prod" → prod, otherwise → dev).
+EXPO_PUBLIC_ENV_NAME=dev
+
 # Other configuration placeholders
 EXPO_PUBLIC_NETWORK=testnet
